--- a/app/src/main/res/layout/currency_text_recycler.xml
+++ b/app/src/main/res/layout/currency_text_recycler.xml
@@ -7,15 +7,17 @@
     <ImageView
         android:id="@+id/curimg"
         android:layout_width="42dp"
-        android:layout_height="39dp"
+        android:layout_height="26dp"
         android:layout_gravity="top|left"
-        android:padding="10dp" />
+        android:layout_marginTop="4dp"
+        android:padding="4dp" />
 
     <TextView
         android:id="@+id/curtxt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="10dp"
+        android:layout_marginTop="4dp"
+        android:padding="4dp"
         android:text="TextView" />
 
 </LinearLayout>
