--- a/app/src/main/res/layout/custom_spinner.xml
+++ b/app/src/main/res/layout/custom_spinner.xml
@@ -1,21 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="horizontal">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:paddingTop="4dp">
 
     <ImageView
         android:id="@+id/img"
         android:layout_width="42dp"
-        android:layout_height="39dp"
+        android:layout_height="26dp"
         android:layout_gravity="top|left"
-        android:padding="10dp" />
+        android:padding="4dp"
+        android:paddingTop="4dp" />
 
     <TextView
         android:id="@+id/txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="top|center_vertical"
-        android:padding="10dp"></TextView>
+        android:gravity="center"
+        android:padding="4dp"
+        android:paddingTop="4dp"
+        android:text="US Dollar"
+        android:textColor="#ffFFFFFF" />
 
 </LinearLayout>
