--- a/app/src/main/res/layout/currency_text_recycler.xml
+++ b/app/src/main/res/layout/currency_text_recycler.xml
@@ -13,6 +13,14 @@
         android:padding="4dp" />
 
     <TextView
+        android:id="@+id/curname"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:padding="4dp"
+        android:text="TextView" />
+
+    <TextView
         android:id="@+id/curtxt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
