--- a/app/src/main/res/layout/custom_spinner.xml
+++ b/app/src/main/res/layout/custom_spinner.xml
@@ -1,26 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:orientation="horizontal"
-    android:paddingTop="4dp">
+    android:padding="8dp">
 
     <ImageView
         android:id="@+id/img"
         android:layout_width="42dp"
         android:layout_height="26dp"
-        android:layout_gravity="top|left"
-        android:padding="4dp"
-        android:paddingTop="4dp" />
+        android:baselineAligned="false" />
 
     <TextView
         android:id="@+id/txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:padding="4dp"
-        android:paddingTop="4dp"
-        android:text="US Dollar"
-        android:textColor="#ffFFFFFF" />
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="4dp"
+        android:baselineAligned="false"
+        android:text="US Dollar" />
 
 </LinearLayout>
