--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,11 +1,27 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat">
+    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="buttonStyle">@style/MyButtonStyle</item>
+        <item name="editTextStyle">@style/MyEditStyle</item>
+        <item name="android:textViewStyle">@style/MyTextStyle</item>
+    </style>
+
+    <style name="MyEditStyle" parent="Widget.AppCompat.EditText">
+        <item name="android:textSize">14sp</item>
+        <item name="android:gravity">center</item>
+    </style>
+
+    <style name="MyButtonStyle" parent="Widget.AppCompat.Button">
+        <item name="android:textSize">14sp</item>
+    </style>
+
+    <style name="MyTextStyle" parent="TextAppearance.AppCompat">
+        <item name="android:textSize">14sp</item>
     </style>
 
 </resources>
