--- a/app/src/main/res/drawable/background_layout.xml
+++ b/app/src/main/res/drawable/background_layout.xml
@@ -1,7 +1,20 @@
+<?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
-    <solid android:color="@android:color/white" />
-    <stroke
-        android:width="2dp"
-        android:color="#000000" />
+    xmlns:tools="http://schemas.android.com/tools"
+    android:shape="rectangle"
+    tools:ignore="ExtraText">
+
+    // The width and color of the border
+    <solid android:color="#6A2196F3" />
+
+    // The desired corner radius. reduce it to keep it less rounded
+    <corners android:radius="20dp" />
+
+    // Add your desired padding
+    <padding
+        android:bottom="5dp"
+        android:left="10dp"
+        android:right="10dp"
+        android:top="5dp"></padding>
+
 </shape>
