--- a/app/src/main/res/layout/custom_spinner.xml
+++ b/app/src/main/res/layout/custom_spinner.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:background="#FFFFFF"
     android:orientation="horizontal"
     android:padding="8dp">
 
@@ -9,6 +10,7 @@
         android:id="@+id/img"
         android:layout_width="42dp"
         android:layout_height="26dp"
+        android:background="#0000FFFF"
         android:baselineAligned="false" />
 
     <TextView
@@ -17,6 +19,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="4dp"
+        android:background="#0000FFFF"
         android:baselineAligned="false"
         android:text="US Dollar" />
 
