--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#3498db</color>
+    <color name="colorAccent">#3498DB</color>
+    <color name="mtrl_textinput_default_box_stroke_color" tools:override="true">@color/colorAccent
+    </color>
+    <color name="tranparent">#6A2196F3</color>
 </resources>
